--- a/node33.html
+++ b/node33.html
@@ -228,12 +228,12 @@ PEG Syntax</A>
   
 
 <UL>
-<LI>On the top level, the grammar consists of <A NAME="6122"></A><SPAN  CLASS="textbf">rules</SPAN>. 
+<LI>On the top level, the grammar consists of <A NAME="6132"></A><SPAN  CLASS="textbf">rules</SPAN>. 
 </LI>
 <LI>Each rule has a name (e.g. <code>primary</code>) that
 identifies the rule, and a 
 </LI>
-<LI><A NAME="6124"></A><SPAN  CLASS="textbf">parsing expression</SPAN> e.g. 
+<LI><A NAME="6134"></A><SPAN  CLASS="textbf">parsing expression</SPAN> e.g. 
 <PRE>
 integer / LEFTPAR additive:additive RIGHTPAR { return additive; }
 </PRE>
@@ -246,7 +246,7 @@ can also contain human-readable name that is used in error messages
 (in our example, only the <code>integer</code> rule has a human-readable name). 
 </LI>
 <LI>The
-parsing starts at the first rule, which is also called the <A NAME="6126"></A><SPAN  CLASS="textbf">start rule</SPAN>.
+parsing starts at the first rule, which is also called the <A NAME="6136"></A><SPAN  CLASS="textbf">start rule</SPAN>.
 </LI>
 </UL>
 
@@ -282,7 +282,7 @@ Initializers</A>
   
 
 <UL>
-<LI>Rules can be preceded by an <A NAME="6136"></A><SPAN  CLASS="textbf">initializer</SPAN> — a piece of JavaScript
+<LI>Rules can be preceded by an <A NAME="6146"></A><SPAN  CLASS="textbf">initializer</SPAN> — a piece of JavaScript
 code in curly braces (<code>{</code> and <code>}</code>). 
 </LI>
 <LI>
@@ -349,7 +349,7 @@ Expressions can also contain references to other rules.
 
 <P>
 If an expression successfully matches a part of the text when running the
-generated parser, it produces a <A NAME="6146"></A><SPAN  CLASS="textbf">match result</SPAN>, which is a JavaScript value.
+generated parser, it produces a <A NAME="6156"></A><SPAN  CLASS="textbf">match result</SPAN>, which is a JavaScript value.
 
 <P>
 
@@ -393,9 +393,11 @@ Consider this action:
 digits:[0-9]+ { return parseInt(digits.join(""), 10); }
 </PRE>
 
-It takes the match result of the expression <code>[0-9]+</code>, which is an
-array of strings containing digits, as its parameter. 
 <UL>
+<LI>It takes the match result of the expression <code>[0-9]+</code>, 
+<FONT COLOR="#ff0000"> which is an
+array of strings containing digits</FONT>, as its parameter. 
+</LI>
 <LI>It joins the digits
 together to form a number and converts it to a JavaScript number object.
 </LI>
@@ -413,6 +415,64 @@ subexpressions and thus forming a recursive structure:
 
 <UL>
 <LI><PRE>
+"literal"
+'literal'
+</PRE>
+Match exact literal string and return it. 
+The string syntax is the same as in JavaScript. 
+
+<P>
+Appending <code>i</code> right after the literal makes the match case-insensitive.
+
+<P>
+</LI>
+<LI><PRE>
+.
+</PRE>
+Match exactly one character and return it as a string.
+
+<P>
+</LI>
+<LI><code>[characters]</code>
+
+<P>
+Match one character from a set and return it as a string. 
+
+<P>
+The characters
+in the list can be escaped in exactly the same way as in JavaScript
+string. 
+
+<P>
+The list of characters can also contain ranges (e.g. <code>[a-z]</code>
+means all lowercase letters). 
+
+<P>
+Preceding the characters with
+<code>^</code> inverts the matched set (e.g. <code>[^a-z]</code> means cl<I>"all character but
+lowercase letters</I>). 
+
+<P>
+Appending <code>i</code> right after the literal makes the
+match case-insensitive.
+
+<P>
+</LI>
+<LI><code>rule</code>
+
+<P>
+Match a parsing expression of a rule recursively and return its match result.
+
+<P>
+</LI>
+<LI><code>( expression )</code>
+
+<P>
+Match a subexpression and return its match result.
+
+<P>
+</LI>
+<LI><PRE>
 expression *
 </PRE>
 Match zero or more repetitions of the expression and 
@@ -429,11 +489,190 @@ match results in an array</FONT>. The matching is greedy, i.e. the parser tries
 to match the expression as many times as possible.
 </LI>
 <LI><PRE>
+expression ?
+</PRE>
+Try to match the expression. If the match succeeds, return its match result, otherwise return <code>null</code>.
+
+<P>
+</LI>
+<LI><code>&amp; expression</code>
+
+<P>
+Try to match the expression. 
+If the match succeeds, just return <code>undefined</code> and do not advance the parser position, otherwise consider the match failed.
+
+<P>
+</LI>
+<LI><code>! expression</code>
+
+<P>
+Try to match the expression. If the match does not succeed, just return undefined and do not advance the parser position, otherwise consider the match failed.
+
+<P>
+</LI>
+<LI><code>&amp; { predicate }</code>
+
+<P>
+The predicate is a piece of JavaScript code that is executed as if it was
+inside a function. 
+
+<P>
+It gets the match results of labeled expressions in
+preceding expression as its arguments. 
+
+<P>
+It should return some JavaScript
+value using the <code>return</code> statement. 
+
+<P>
+If the returned value evaluates to
+<code>true</code> in boolean context, just return <code>undefined</code> and do not advance the
+parser position; otherwise consider the match failed.
+
+<P>
+The code inside the predicate can access all variables and functions defined in the initializer at the beginning of the grammar.
+
+<P>
+The code inside the predicate can also access the current parse position
+using the <code>offset</code> function.
+
+<P>
+It returns a zero-based character index into the input string. 
+
+<P>
+The code
+can also access the current line and column using the <code>line</code> and <code>column</code>
+functions. 
+Both return one-based indexes.
+
+<P>
+The code inside the predicate can also access options passed to the parser using the 
+<code>options</code> variable.
+
+<P>
+Note that curly braces in the predicate code must be balanced.
+
+<P>
+</LI>
+<LI><code>! { predicate }</code>
+
+<P>
+The predicate is a piece of JavaScript code that is executed as if it was
+inside a function. 
+
+<P>
+It gets the match results of labeled expressions in
+preceding expression as its arguments. 
+
+<P>
+It should return some JavaScript
+value using the <code>return</code> statement. 
+
+<P>
+If the returned value evaluates to
+<code>false</code> in boolean context, just return <code>undefined</code> and do not advance the
+parser position; otherwise consider the match failed.
+
+<P>
+The code inside the predicate can access all variables and functions defined in the initializer at the beginning of the grammar.
+
+<P>
+The code inside the predicate can also access the current parse position using the 
+<code>offset</code> function. 
+
+<P>
+It returns a zero-based character index into the input string. 
+
+<P>
+The code can also access the current line and column using the 
+<code>line</code> and <code>column</code> functions. 
+Both return one-based indexes.
+
+<P>
+The code inside the predicate can also access options passed to the
+parser using the <code>options</code> variable.
+
+<P>
+Note that curly braces in the predicate code must be balanced.
+
+<P>
+</LI>
+<LI><PRE>
 $ expression
 </PRE>
 Try to match the expression. If the match succeeds, 
 
 <FONT COLOR="#ff0000"> return the matched string instead of the match result</FONT>.
+
+<P>
+</LI>
+<LI><code>label : expression</code>
+
+<P>
+Match the expression and remember its match result under given label. The label must be a JavaScript identifier.
+
+<P>
+Labeled expressions are useful together with actions, where saved match results can be accessed by action's JavaScript code.
+
+<P>
+</LI>
+<LI><code>expression1 expression2 ... expressionn</code>
+
+<P>
+Match a sequence of expressions and return their match results in an array.
+
+<P>
+</LI>
+<LI><code>expression { action }</code>
+
+<P>
+Match the expression. If the match is successful, run the action, otherwise consider the match failed.
+
+<P>
+The action is a piece of JavaScript code that is executed as if it was
+inside a function. It gets the match results of labeled expressions in
+preceding expression as its arguments. The action should return some
+JavaScript value using the return statement. This value is considered
+match result of the preceding expression.
+
+<P>
+To indicate an error, the code inside the action can invoke the expected
+function, which makes the parser throw an exception. The function takes
+one parameter — a description of what was expected at the current
+position. This description will be used as part of a message of the
+thrown exception.
+
+<P>
+The code inside an action can also invoke the error function, which also
+makes the parser throw an exception. The function takes one parameter
+— an error message. This message will be used by the thrown exception.
+
+<P>
+The code inside the action can access all variables and functions defined
+in the initializer at the beginning of the grammar. Curly braces in the
+action code must be balanced.
+
+<P>
+The code inside the action can also access the string matched by the
+expression using the text function.
+
+<P>
+The code inside the action can also access the parse position at the beginning of the action's expression using the offset function. It returns a zero-based character index into the input string. The code can also access the line and column at the beginning of the action's expression using the line and column functions. Both return one-based indexes.
+
+<P>
+The code inside the action can also access options passed to the parser using the options variable.
+
+<P>
+Note that curly braces in the action code must be balanced.
+
+<P>
+</LI>
+<LI><PRE>
+expression1 / expression2 / ... / expressionn
+</PRE>
+Try to match the first expression, if it does not succeed, try the second one, etc. Return the match result of the first successfully matched expression. If no expression matches, consider the match failed.
+
+<P>
 </LI>
 </UL>
 
@@ -499,7 +738,7 @@ Asociación Incorrecta para la Resta y la División</A>
 <P>
 <P>
 <DIV><B>Definición  <SPAN CLASS="arabic">4</SPAN>.<SPAN CLASS="arabic">3</SPAN>.<SPAN CLASS="arabic">1</SPAN></B> &nbsp; 
-<I>Una <A NAME="6180"></A><SPAN  CLASS="textbf">gramática es recursiva por la izquierda</SPAN> cuando existe una derivación
+<I>Una <A NAME="6192"></A><SPAN  CLASS="textbf">gramática es recursiva por la izquierda</SPAN> cuando existe una derivación
 <!-- MATH
  $A \stackrel{*}{\Longrightarrow} A \alpha$
  -->
@@ -520,7 +759,7 @@ una regla de producción de la forma <!-- MATH
 En este caso se dice que la recursión por la izquierda es directa.</I></DIV><P></P>
 
 <P>
-Cuando la gramática es <A NAME="6182"></A><SPAN  CLASS="textbf">recursiva por la izquierda</SPAN>, 
+Cuando la gramática es <A NAME="6194"></A><SPAN  CLASS="textbf">recursiva por la izquierda</SPAN>, 
 el método 
 de análisis recursivo descendente predictivo no funciona. 
 En ese caso, el procedimiento
