--- a/node33.html
+++ b/node33.html
@@ -228,12 +228,12 @@ PEG Syntax</A>
   
 
 <UL>
-<LI>On the top level, the grammar consists of <A NAME="6132"></A><SPAN  CLASS="textbf">rules</SPAN>. 
+<LI>On the top level, the grammar consists of <A NAME="6133"></A><SPAN  CLASS="textbf">rules</SPAN>. 
 </LI>
 <LI>Each rule has a name (e.g. <code>primary</code>) that
 identifies the rule, and a 
 </LI>
-<LI><A NAME="6134"></A><SPAN  CLASS="textbf">parsing expression</SPAN> e.g. 
+<LI><A NAME="6135"></A><SPAN  CLASS="textbf">parsing expression</SPAN> e.g. 
 <PRE>
 integer / LEFTPAR additive:additive RIGHTPAR { return additive; }
 </PRE>
@@ -246,7 +246,7 @@ can also contain human-readable name that is used in error messages
 (in our example, only the <code>integer</code> rule has a human-readable name). 
 </LI>
 <LI>The
-parsing starts at the first rule, which is also called the <A NAME="6136"></A><SPAN  CLASS="textbf">start rule</SPAN>.
+parsing starts at the first rule, which is also called the <A NAME="6137"></A><SPAN  CLASS="textbf">start rule</SPAN>.
 </LI>
 </UL>
 
@@ -282,7 +282,7 @@ Initializers</A>
   
 
 <UL>
-<LI>Rules can be preceded by an <A NAME="6146"></A><SPAN  CLASS="textbf">initializer</SPAN> — a piece of JavaScript
+<LI>Rules can be preceded by an <A NAME="6147"></A><SPAN  CLASS="textbf">initializer</SPAN> — a piece of JavaScript
 code in curly braces (<code>{</code> and <code>}</code>). 
 </LI>
 <LI>
@@ -349,7 +349,7 @@ Expressions can also contain references to other rules.
 
 <P>
 If an expression successfully matches a part of the text when running the
-generated parser, it produces a <A NAME="6156"></A><SPAN  CLASS="textbf">match result</SPAN>, which is a JavaScript value.
+generated parser, it produces a <A NAME="6157"></A><SPAN  CLASS="textbf">match result</SPAN>, which is a JavaScript value.
 
 <P>
 
@@ -499,22 +499,26 @@ Try to match the expression. If the match succeeds, return its match result, oth
 
 <P>
 Try to match the expression. 
-If the match succeeds, just return <code>undefined</code> and do not advance the parser position, otherwise consider the match failed.
+If the match succeeds, just return <code>undefined</code> and do not advance
+the parser position, otherwise consider the match failed.
 
 <P>
 </LI>
 <LI><code>! expression</code>
 
 <P>
-Try to match the expression. If the match does not succeed, just return undefined and do not advance the parser position, otherwise consider the match failed.
+Try to match the expression. If the match does not succeed, just return
+<code>undefined</code> and do not advance the parser position, otherwise consider
+the match failed.
 
 <P>
 </LI>
 <LI><code>&amp; { predicate }</code>
 
 <P>
-The predicate is a piece of JavaScript code that is executed as if it was
-inside a function. 
+
+<FONT COLOR="#ff0000"> The predicate is a piece of JavaScript code that is executed as if it was
+inside a function</FONT>. 
 
 <P>
 It gets the match results of labeled expressions in
@@ -609,10 +613,14 @@ Try to match the expression. If the match succeeds,
 <LI><code>label : expression</code>
 
 <P>
-Match the expression and remember its match result under given label. The label must be a JavaScript identifier.
+Match the expression and remember its match result under given <code>label</code>. 
 
 <P>
-Labeled expressions are useful together with actions, where saved match results can be accessed by action's JavaScript code.
+The label must be a JavaScript identifier.
+
+<P>
+Labeled expressions are useful together with actions, where saved match
+results can be accessed by action's JavaScript code.
 
 <P>
 </LI>
@@ -626,18 +634,31 @@ Match a sequence of expressions and return their match results in an array.
 <LI><code>expression { action }</code>
 
 <P>
-Match the expression. If the match is successful, run the action, otherwise consider the match failed.
+Match the expression. If the match is successful, run the <code>action</code>, 
+otherwise consider the match failed.
 
 <P>
-The action is a piece of JavaScript code that is executed as if it was
-inside a function. It gets the match results of labeled expressions in
-preceding expression as its arguments. The action should return some
-JavaScript value using the return statement. This value is considered
+The <code>action</code> is a piece of JavaScript code that is executed as if it was
+inside a function. 
+
+<P>
+It gets the match results of labeled expressions in
+preceding expression as its arguments. 
+
+<P>
+The action should return some
+JavaScript value using the <code>return</code> statement. 
+
+<P>
+This value is considered
 match result of the preceding expression.
 
 <P>
-To indicate an error, the code inside the action can invoke the expected
-function, which makes the parser throw an exception. The function takes
+To indicate an error, the code inside the action can invoke the <code>expected</code>
+function, which makes the parser throw an exception. 
+
+<P>
+The function takes
 one parameter — a description of what was expected at the current
 position. This description will be used as part of a message of the
 thrown exception.
@@ -738,7 +759,7 @@ Asociación Incorrecta para la Resta y la División</A>
 <P>
 <P>
 <DIV><B>Definición  <SPAN CLASS="arabic">4</SPAN>.<SPAN CLASS="arabic">3</SPAN>.<SPAN CLASS="arabic">1</SPAN></B> &nbsp; 
-<I>Una <A NAME="6192"></A><SPAN  CLASS="textbf">gramática es recursiva por la izquierda</SPAN> cuando existe una derivación
+<I>Una <A NAME="6195"></A><SPAN  CLASS="textbf">gramática es recursiva por la izquierda</SPAN> cuando existe una derivación
 <!-- MATH
  $A \stackrel{*}{\Longrightarrow} A \alpha$
  -->
@@ -759,7 +780,7 @@ una regla de producción de la forma <!-- MATH
 En este caso se dice que la recursión por la izquierda es directa.</I></DIV><P></P>
 
 <P>
-Cuando la gramática es <A NAME="6194"></A><SPAN  CLASS="textbf">recursiva por la izquierda</SPAN>, 
+Cuando la gramática es <A NAME="6197"></A><SPAN  CLASS="textbf">recursiva por la izquierda</SPAN>, 
 el método 
 de análisis recursivo descendente predictivo no funciona. 
 En ese caso, el procedimiento
