--- a/node33.html
+++ b/node33.html
@@ -228,12 +228,12 @@ PEG Syntax</A>
   
 
 <UL>
-<LI>On the top level, the grammar consists of <A NAME="6150"></A><SPAN  CLASS="textbf">rules</SPAN>. 
+<LI>On the top level, the grammar consists of <A NAME="6152"></A><SPAN  CLASS="textbf">rules</SPAN>. 
 </LI>
 <LI>Each rule has a name (e.g. <code>primary</code>) that
 identifies the rule, and a 
 </LI>
-<LI><A NAME="6152"></A><SPAN  CLASS="textbf">parsing expression</SPAN> e.g. 
+<LI><A NAME="6154"></A><SPAN  CLASS="textbf">parsing expression</SPAN> e.g. 
 <PRE>
 integer / LEFTPAR additive:additive RIGHTPAR { return additive; }
 </PRE>
@@ -251,7 +251,7 @@ integer "integer"
 </PRE>
 </LI>
 <LI>The
-parsing starts at the first rule, which is also called the <A NAME="6156"></A><SPAN  CLASS="textbf">start rule</SPAN>.
+parsing starts at the first rule, which is also called the <A NAME="6158"></A><SPAN  CLASS="textbf">start rule</SPAN>.
 </LI>
 </UL>
 
@@ -287,7 +287,7 @@ Initializers</A>
   
 
 <UL>
-<LI>Rules can be preceded by an <A NAME="6166"></A><SPAN  CLASS="textbf">initializer</SPAN> — a piece of JavaScript
+<LI>Rules can be preceded by an <A NAME="6168"></A><SPAN  CLASS="textbf">initializer</SPAN> — a piece of JavaScript
 code in curly braces (<code>{</code> and <code>}</code>). 
 </LI>
 <LI>
@@ -297,7 +297,7 @@ before the generated parser starts parsing</FONT>
 <LI>All variables and functions
 defined in the initializer are accessible in rule actions and semantic
 predicates (the <code>&amp; { predicate }</code> and <code>! { predicate }</code> 
-are called <A NAME="6170"></A><SPAN  CLASS="textbf">semantic predicates</SPAN>)
+are called <A NAME="6172"></A><SPAN  CLASS="textbf">semantic predicates</SPAN>)
 </LI>
 <LI>The code inside the initializer can access options passed to
 the parser using the <code>options</code> variable. 
@@ -371,7 +371,7 @@ Expressions can also contain references to other rules.
 
 <P>
 If an expression successfully matches a part of the text when running the
-generated parser, it produces a <A NAME="6178"></A><SPAN  CLASS="textbf">match result</SPAN>, which is a JavaScript value.
+generated parser, it produces a <A NAME="6180"></A><SPAN  CLASS="textbf">match result</SPAN>, which is a JavaScript value.
 
 <P>
 
@@ -396,7 +396,7 @@ Parser Actions</A>
   
 
 <P>
-One special case of parser expression is a <A NAME="6190"></A><SPAN  CLASS="textbf">parser action</SPAN> — a piece of
+One special case of parser expression is a <A NAME="6192"></A><SPAN  CLASS="textbf">parser action</SPAN> — a piece of
 JavaScript code inside curly braces (<code>{</code> and <code>}</code>) that 
 <FONT COLOR="#ff0000"> takes match
 results of some of the the preceding expressions and returns a JavaScript
@@ -596,44 +596,54 @@ the match failed.
 
 <P>
 
+<UL>
+<LI>
 <FONT COLOR="#ff0000"> The predicate is a piece of JavaScript code that is executed as if it was
 inside a function</FONT>. 
 
 <P>
-It gets the match results of labeled expressions in
+</LI>
+<LI>It gets the match results of labeled expressions in
 preceding expression as its arguments. 
 
 <P>
-It should return some JavaScript
+</LI>
+<LI>It should return some JavaScript
 value using the <code>return</code> statement. 
 
 <P>
-If the returned value evaluates to
+</LI>
+<LI>If the returned value evaluates to
 <code>true</code> in boolean context, just return <code>undefined</code> and do not advance the
 parser position; otherwise consider the match failed.
 
 <P>
-The code inside the predicate can access all variables and functions defined in the initializer at the beginning of the grammar.
+</LI>
+<LI>The code inside the predicate can access all variables and functions defined in the initializer at the beginning of the grammar.
 
 <P>
-The code inside the predicate can also access the current parse position
+</LI>
+<LI>The code inside the predicate can also access the current parse position
 using the <code>offset</code> function.
+The <code>offset</code> function returns a zero-based character index into the input string. 
 
 <P>
-It returns a zero-based character index into the input string. 
-
-<P>
-The code
+</LI>
+<LI>The code
 can also access the current line and column using the <code>line</code> and <code>column</code>
 functions. 
 Both return one-based indexes.
 
 <P>
-The code inside the predicate can also access options passed to the parser using the 
+</LI>
+<LI>The code inside the predicate can also access options passed to the parser using the 
 <code>options</code> variable.
 
 <P>
-Note that curly braces in the predicate code must be balanced.
+</LI>
+<LI>Note that curly braces in the predicate code must be balanced.
+</LI>
+</UL>
 
 <P>
 </LI>
@@ -846,7 +856,7 @@ Asociación Incorrecta para la Resta y la División</A>
 <P>
 <P>
 <DIV><B>Definición  <SPAN CLASS="arabic">4</SPAN>.<SPAN CLASS="arabic">3</SPAN>.<SPAN CLASS="arabic">1</SPAN></B> &nbsp; 
-<I>Una <A NAME="6220"></A><SPAN  CLASS="textbf">gramática es recursiva por la izquierda</SPAN> cuando existe una derivación
+<I>Una <A NAME="6222"></A><SPAN  CLASS="textbf">gramática es recursiva por la izquierda</SPAN> cuando existe una derivación
 <!-- MATH
  $A \stackrel{*}{\Longrightarrow} A \alpha$
  -->
@@ -867,7 +877,7 @@ una regla de producción de la forma <!-- MATH
 En este caso se dice que la recursión por la izquierda es directa.</I></DIV><P></P>
 
 <P>
-Cuando la gramática es <A NAME="6222"></A><SPAN  CLASS="textbf">recursiva por la izquierda</SPAN>, 
+Cuando la gramática es <A NAME="6224"></A><SPAN  CLASS="textbf">recursiva por la izquierda</SPAN>, 
 el método 
 de análisis recursivo descendente predictivo no funciona. 
 En ese caso, el procedimiento
