--- a/node33.html
+++ b/node33.html
@@ -228,12 +228,12 @@ PEG Syntax</A>
   
 
 <UL>
-<LI>On the top level, the grammar consists of <A NAME="6156"></A><SPAN  CLASS="textbf">rules</SPAN>. 
+<LI>On the top level, the grammar consists of <A NAME="6158"></A><SPAN  CLASS="textbf">rules</SPAN>. 
 </LI>
 <LI>Each rule has a name (e.g. <code>primary</code>) that
 identifies the rule, and a 
 </LI>
-<LI><A NAME="6158"></A><SPAN  CLASS="textbf">parsing expression</SPAN> e.g. 
+<LI><A NAME="6160"></A><SPAN  CLASS="textbf">parsing expression</SPAN> e.g. 
 <PRE>
 integer / LEFTPAR additive:additive RIGHTPAR { return additive; }
 </PRE>
@@ -251,7 +251,7 @@ integer "integer"
 </PRE>
 </LI>
 <LI>The
-parsing starts at the first rule, which is also called the <A NAME="6162"></A><SPAN  CLASS="textbf">start rule</SPAN>.
+parsing starts at the first rule, which is also called the <A NAME="6164"></A><SPAN  CLASS="textbf">start rule</SPAN>.
 </LI>
 </UL>
 
@@ -287,7 +287,7 @@ Initializers</A>
   
 
 <UL>
-<LI>Rules can be preceded by an <A NAME="6172"></A><SPAN  CLASS="textbf">initializer</SPAN> — a piece of JavaScript
+<LI>Rules can be preceded by an <A NAME="6174"></A><SPAN  CLASS="textbf">initializer</SPAN> — a piece of JavaScript
 code in curly braces (<code>{</code> and <code>}</code>). 
 </LI>
 <LI>
@@ -297,7 +297,7 @@ before the generated parser starts parsing</FONT>
 <LI>All variables and functions
 defined in the initializer are accessible in rule actions and semantic
 predicates (the <code>&amp; { predicate }</code> and <code>! { predicate }</code> 
-are called <A NAME="6176"></A><SPAN  CLASS="textbf">semantic predicates</SPAN>)
+are called <A NAME="6178"></A><SPAN  CLASS="textbf">semantic predicates</SPAN>)
 </LI>
 <LI>The code inside the initializer can access options passed to
 the parser using the <code>options</code> variable. 
@@ -371,7 +371,7 @@ Expressions can also contain references to other rules.
 
 <P>
 If an expression successfully matches a part of the text when running the
-generated parser, it produces a <A NAME="6184"></A><SPAN  CLASS="textbf">match result</SPAN>, which is a JavaScript value.
+generated parser, it produces a <A NAME="6186"></A><SPAN  CLASS="textbf">match result</SPAN>, which is a JavaScript value.
 
 <P>
 
@@ -396,7 +396,7 @@ Parser Actions</A>
   
 
 <P>
-One special case of parser expression is a <A NAME="6196"></A><SPAN  CLASS="textbf">parser action</SPAN> — a piece of
+One special case of parser expression is a <A NAME="6198"></A><SPAN  CLASS="textbf">parser action</SPAN> — a piece of
 JavaScript code inside curly braces (<code>{</code> and <code>}</code>) that 
 <FONT COLOR="#ff0000"> takes match
 results of some of the the preceding expressions and returns a JavaScript
@@ -739,27 +739,34 @@ Match a sequence of expressions and return their match results in an array.
 <LI><code>expression { action }</code>
 
 <P>
-Match the expression. If the match is successful, run the <code>action</code>, 
+
+<UL>
+<LI>Match the expression. If the match is successful, run the <code>action</code>, 
 otherwise consider the match failed.
 
 <P>
-The <code>action</code> is a piece of JavaScript code that is executed as if it was
+</LI>
+<LI>The <code>action</code> is a piece of JavaScript code that is executed as if it was
 inside a function. 
 
 <P>
-It gets the match results of labeled expressions in
+</LI>
+<LI>It gets the match results of labeled expressions in
 preceding expression as its arguments. 
 
 <P>
-The action should return some
+</LI>
+<LI>The action should return some
 JavaScript value using the <code>return</code> statement. 
 
 <P>
-This value is considered
+</LI>
+<LI>This value is considered
 match result of the preceding expression.
 
 <P>
-To indicate an error, the code inside the action can invoke the <code>expected</code>
+</LI>
+<LI>To indicate an error, the code inside the action can invoke the <code>expected</code>
 function, which makes the parser throw an exception. 
 
 <P>
@@ -769,35 +776,47 @@ position. This description will be used as part of a message of the
 thrown exception.
 
 <P>
-The code inside an action can also invoke the <code>error</code> function, which also
+</LI>
+<LI>The code inside an action can also invoke the <code>error</code> function, which also
 makes the parser throw an exception. The function takes one parameter
 — an error message. This message will be used by the thrown exception.
 
 <P>
-The code inside the action can access all variables and functions defined
-in the initializer at the beginning of the grammar. Curly braces in the
+</LI>
+<LI>The code inside the action can access all variables and functions defined
+in the initializer at the beginning of the grammar. 
+
+<P>
+</LI>
+<LI>Curly braces in the
 action code must be balanced.
 
 <P>
-The code inside the action can also access the string matched by the
+</LI>
+<LI>The code inside the action can also access the string matched by the
 expression using the <code>text</code> function.
 
 <P>
-The code inside the action can also access the parse position at the beginning of the action's expression using the <code>offset</code> function. 
-
-<P>
+</LI>
+<LI>The code inside the action can also access the parse position at the beginning of the action's expression using the <code>offset</code> function. 
 It returns a zero-based character index into the input string. 
 
 <P>
-The code can also access the line and column at 
+</LI>
+<LI>The code can also access the line and column at 
 the beginning of the action's expression using the <code>line</code> and <code>column</code>
 functions. Both return one-based indexes.
 
 <P>
-The code inside the action can also access options passed to the parser using the options variable.
+</LI>
+<LI>The code inside the action can also access options passed to the parser using the <code>options</code> 
+variable.
 
 <P>
-Note that curly braces in the action code must be balanced.
+</LI>
+<LI>Note that curly braces in the action code must be balanced.
+</LI>
+</UL>
 
 <P>
 </LI>
@@ -872,7 +891,7 @@ Asociación Incorrecta para la Resta y la División</A>
 <P>
 <P>
 <DIV><B>Definición  <SPAN CLASS="arabic">4</SPAN>.<SPAN CLASS="arabic">3</SPAN>.<SPAN CLASS="arabic">1</SPAN></B> &nbsp; 
-<I>Una <A NAME="6226"></A><SPAN  CLASS="textbf">gramática es recursiva por la izquierda</SPAN> cuando existe una derivación
+<I>Una <A NAME="6228"></A><SPAN  CLASS="textbf">gramática es recursiva por la izquierda</SPAN> cuando existe una derivación
 <!-- MATH
  $A \stackrel{*}{\Longrightarrow} A \alpha$
  -->
@@ -893,7 +912,7 @@ una regla de producción de la forma <!-- MATH
 En este caso se dice que la recursión por la izquierda es directa.</I></DIV><P></P>
 
 <P>
-Cuando la gramática es <A NAME="6228"></A><SPAN  CLASS="textbf">recursiva por la izquierda</SPAN>, 
+Cuando la gramática es <A NAME="6230"></A><SPAN  CLASS="textbf">recursiva por la izquierda</SPAN>, 
 el método 
 de análisis recursivo descendente predictivo no funciona. 
 En ese caso, el procedimiento
